<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calmWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/ll_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_appLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_applogo"/>

        <TextView
            android:id="@+id/iv_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/greatify_app"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/calmBlack"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/ib_signoutButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/al_signout"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:src="@drawable/ic_signout"/>

        <Button
            app:backgroundTint="@color/blue"
            android:id="@+id/btn_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/al_user"
            android:drawableEnd="@drawable/ic_user"
            android:textAllCaps="false"
            android:text="@string/username"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_navbar"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/ll_signupHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_titleEditAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/modify1"
                android:textAlignment="center"
                android:textColor="@color/calmBlack"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/data"
                android:textAlignment="center"
                android:textColor="@color/lightGreenBlue"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_signUpDescriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_signupHeader"
            android:layout_marginBottom="40dp"
            android:text="@string/update_complaint_data"
            android:textAlignment="center"
            android:textColor="@color/calmBlack"
            android:textSize="12sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/et_complaintTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_signUpDescriptions"
            android:layout_marginBottom="20dp"
            android:drawablePadding="10dp"
            android:background="@drawable/et_rounded"
            android:inputType="textLongMessage"
            android:textColorHint="@color/lightBlue"
            android:textColor="@color/calmBlack"
            android:textSize="16sp"
            android:padding="20dp"
            android:hint="@string/complaint_tittle"/>

        <EditText
            android:id="@+id/et_complaintDescriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_complaintTitle"
            android:layout_marginBottom="20dp"
            android:drawablePadding="10dp"
            android:background="@drawable/et_rounded"
            android:textColorHint="@color/lightBlue"
            android:textColor="@color/calmBlack"
            android:textSize="16sp"
            android:padding="20dp"
            android:hint="@string/complaint_descriptions"
            android:elevation="30dp"/>

        <EditText
            android:id="@+id/et_complaintDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_complaintDescriptions"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:drawablePadding="10dp"
            android:background="@drawable/et_rounded"
            android:hint="@string/date"
            android:textColorHint="@color/lightBlue"
            android:textColor="@color/calmBlack"
            android:textSize="16sp"
            android:inputType="date"/>

        <EditText
            android:id="@+id/et_complaintPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_complaintDate"
            android:layout_marginBottom="40dp"
            android:padding="20dp"
            android:drawablePadding="10dp"
            android:background="@drawable/et_rounded"
            android:inputType="textLongMessage"
            android:hint="@string/place"
            android:textColorHint="@color/lightBlue"
            android:textColor="@color/calmBlack"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_userData"
            app:backgroundTint="@color/lightGreenBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_complaintPlace"
            android:background="@drawable/btn_rounded"
            android:textAllCaps="false"
            android:text="@string/update_data"
            android:textColor="@color/calmWhite"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_dataId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>