<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/calmWhite"

    tools:context=".Views.Authentications.AuthenticationsActivity">

    <!-- signin -->
    <RelativeLayout
        android:id="@+id/rl_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/iv_illustrations"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerInside"
            android:src="@drawable/il_sapiens5"/>

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/iv_illustrations"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/sign"
                android:textAlignment="center"
                android:textColor="@color/calmBlack"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/in"
                android:textAlignment="center"
                android:textColor="@color/lightGreenBlue"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_descriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_header"
            android:layout_marginBottom="20dp"
            android:text="@string/auth_text1"
            android:textAlignment="center"
            android:textColor="@color/calmBlack"
            android:textSize="12sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_descriptions"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_user"
            android:drawableTint="@color/lightBlue"
            android:drawablePadding="10dp"
            android:background="@drawable/et_rounded"
            android:textColorHint="@color/lightBlue"
            android:textColor="@color/lightBlue"
            android:padding="20dp"
            android:inputType="textPersonName"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableRight="@drawable/ic_unseen"
            android:drawablePadding="10dp"
            android:background="@drawable/et_rounded"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/lightBlue"
            android:textColor="@color/lightBlue"/>

        <Button
            android:id="@+id/btn_signin"
            app:backgroundTint="@color/lightGreenBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:background="@drawable/btn_rounded"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            android:textColor="@color/calmWhite"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/ll_container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/btn_signin"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/do_not_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/calmBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_registerUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register_here"
                android:textAlignment="center"
                android:textColor="@color/lightGreenBlue"
                android:textSize="12sp"
                android:textStyle="bold"
                android:clickable="true"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>